<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivPicture"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/hello"
            tools:text="Hello, name" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            tools:text="email@server.com" />

        <TextView
            android:id="@+id/tvBirthday"
            android:layout_width="wrap_content"
            android:layout_height="29dp"
            android:layout_gravity="center_horizontal"
            tools:text="29/02/1901" />


        <Button
            android:id="@+id/btFbLogin"
            android:layout_width="232dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/log_in_with_facebook"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            app:backgroundTint="#3F51B5"
            tools:visibility="visible" />

        <Button
            android:id="@+id/btDetails"
            android:layout_width="231dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/details"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:visibility="gone"
            app:backgroundTint="#9C27B0"
            tools:visibility="visible" />

    </LinearLayout>

</RelativeLayout>

