<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:gravity="center"
    tools:context=".DetailsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingTop="15dp"
        android:paddingBottom="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/id"
                android:textAlignment="center"
                android:textColor="#3F51B5"
                android:textSize="24sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/tvFbId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text=""
                android:textAlignment="center"
                android:textSize="22sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/first_name"
                android:textAlignment="center"
                android:textColor="#3F51B5"
                android:textSize="24sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/tvFbFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textAlignment="center"

                android:textSize="22sp"
                android:textStyle="bold"
                android:gravity="center_horizontal" />

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/middle_name"

                android:textAlignment="center"
                android:textColor="#3F51B5"
                android:textSize="24sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/tvFbMiddleName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textAlignment="center"
                android:textSize="22sp"
                android:textStyle="bold"
                android:gravity="center_horizontal" />

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/last_name"
                android:textAlignment="center"
                android:textColor="#3F51B5"
                android:textSize="24sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/tvFbLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textAlignment="center"
                android:textSize="22sp"
                android:textStyle="bold"
                android:gravity="center_horizontal" />


            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/name"
                android:textAlignment="center"
                android:textColor="#3F51B5"
                android:textSize="24sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/tvFbName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textAlignment="center"
                android:textSize="22sp"
                android:textStyle="bold"
                android:gravity="center_horizontal" />

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/picture_url"
                android:textAlignment="center"
                android:textColor="#3F51B5"
                android:textSize="24sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/tvFbPictureUrl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textAlignment="center"
                android:textSize="22sp"
                android:textStyle="bold"
                android:gravity="center_horizontal" />

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/email"
                android:textAlignment="center"
                android:textColor="#3F51B5"
                android:textSize="24sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/tvFbEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textAlignment="center"
                android:textSize="22sp"
                android:textStyle="bold"
                android:gravity="center_horizontal" />

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/access_token"
                android:textAlignment="center"
                android:textColor="#3F51B5"
                android:textSize="24sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/tvFbToken"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textAlignment="center"
                android:textSize="22sp"
                android:textStyle="bold"
                android:gravity="center_horizontal" />

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp" />
        </LinearLayout>

    </ScrollView>

</RelativeLayout>